<resources>
    <string name="app_name">StatusSaver</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share App</string>
    <string name="menu_send">Send</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="whatsapp" translatable="false">Whatsapp</string>
    <string name="biz_whatsapp" translatable="false">Biz Whatsapp</string>
    <string name="gb_whatsapp" translatable="false">GB Whatsapp</string>
    <string name="rate">Rate</string>
    <string name="communicate">Communicate</string>
    <string name="about">About</string>
    <string name="developed_by_wilsontech">Developed by wilsonTech</string>
    <string name="status_saver">Status Saver</string>
    <string name="settings">Settings</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="download">Download</string>
    <string name="repost">Repost</string>


    <string name="authority" translatable="false">com.olabode.wilson.statussaver.fileProvider</string>
</resources>
