<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/whatsAppFragment"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/whatsapp" />
        <item
            android:id="@+id/bizwhatsAppFragment"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/biz_whatsapp" />

        <item
            android:id="@+id/gbWhatsAppFragment"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/gb_whatsapp" />

        <item
            android:id="@+id/settingsFragment"
            android:title="@string/settings" />


    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_upgrade"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/remove_ads" />
        </menu>
    </item>

</menu>
